--- a/MyTrade/Views/Admin/DistributePayment.cshtml
+++ b/MyTrade/Views/Admin/DistributePayment.cshtml
@@ -142,7 +142,7 @@
                                     <thead>
                                         <tr>
                                             <th>CurrentDate</th>
-                                            <th>LoginId</th>
+                                            <th>From LoginId</th>
                                             <th>From Name</th>
                                             <th>Amount</th>
                                             <th>Level</th>
@@ -183,7 +183,7 @@
                                             <thead>
                                                 <tr>
                                                     <th>CurrentDate</th>
-                                                    <th>LoginId</th>
+                                                    <th>From LoginId</th>
                                                     <th>From Name</th>
                                                     <th>Amount</th>
                                                     <th>Level</th>
