--- a/MyTrade/Views/Admin/PayoutDetailForAdmin.cshtml
+++ b/MyTrade/Views/Admin/PayoutDetailForAdmin.cshtml
@@ -8,7 +8,16 @@
 
 <link href="~/plugins/flatpickr/flatpickr.css" rel="stylesheet" type="text/css">
 <link href="~/plugins/flatpickr/custom-flatpickr.css" rel="stylesheet" type="text/css">
-
+<style>
+    .table-responsive {
+        display: block;
+        width: 100%;
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+        max-height: 350px !important;
+        overflow-y: scroll;
+    }
+</style>
 @using (Html.BeginForm("PayoutDetailForAdmin", "Admin", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
 {
     <div class="container">
@@ -75,7 +84,7 @@
                                                     <td>@Item.PayoutNo</td>
                                                     <td>@Item.LevelIncomeTR1</td>
                                                     <td>@Item.LevelIncomeTR2</td>
-                                                    <td><a href="#" class="td-content product-brand text-danger" onclick="Open('@Item.Fk_UserId');">@Item.GrossAmount</a></td>
+                                                    <td><a href="#" class="td-content product-brand text-danger" id="btnpayout_@Item.Fk_UserId" onclick="Open('@Item.Fk_UserId');" data-payoutno='@Item.PayoutNo'>@Item.GrossAmount</a></td>
                                                     <td>@Item.TDSAmount</td>
                                                     <td>@Item.ProcessingFee</td>
                                                     <td>@Item.NetAmount</td>
@@ -92,8 +101,8 @@
             </div>
         </div>
     </div>
-    <div class="modal fade" id="myModal" role="dialog"  data-backdrop="static" style="display: none;padding-top:55px;">
-        <div class="modal-dialog">
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" id="myModal" role="dialog" data-backdrop="static" data-keyboard="false" aria-labelledby="myModalTPS" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
 
             <!-- Modal content-->
             <div class="modal-content">
@@ -109,18 +118,14 @@
                                 <table class="table table-striped table-bordered table-hover" id="tblData">
                                     <thead>
                                         <tr>
-                                            <th>Payout No</th>
-                                            <th>Closing Date</th>
-                                            <th>Net Payable Amount</th>
+                                            <th>CurrentDate</th>
+                                            <th>From LoginId</th>
+                                            <th>From Name</th>
+                                            <th>Amount</th>
+                                            <th>Level</th>
+                                            <th>Payment Type</th>
                                         </tr>
                                     </thead>
-                                    <tfoot>
-                                        <tr>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                        </tr>
-                                    </tfoot>
                                 </table>
                             </div>
                         </div>
@@ -151,24 +156,28 @@
     }
     function Open(Fk_UserId) {
         $("#Fk_UserId").val(Fk_UserId);
+        var PayoutNo = $('#btnpayout_' + Fk_UserId).attr('data-payoutno');
         $(".errortext").removeClass("errortext");
         //$("#divload").css({ 'display': '' });
         $.ajax({
             url: "/Admin/GetPayoutReportforAmount",
             Type: "Get",
             DataType: "JSON",
-            data: { Fk_UserId: $("#Fk_UserId").val() },
+            data: { Fk_UserId: $("#Fk_UserId").val(), PayoutNo: PayoutNo },
             success: function (data) {
                 console.log(data)
                 $('#tblData').find("tr:not(:first)").remove();
                 if (data.lsttopupreport.length > 0) {
                     for (var i = 0; i < data.lsttopupreport.length; i++) {
-                        $("#tblData").append('<tr><td id="PayoutNo' + i + ' " >' + data.lsttopupreport[i].PayoutNo +
-                            '</td><td id="ClosingDate' + i + ' " >' + data.lsttopupreport[i].ClosingDate +
-                             '</td><td id="NetAmount' + i + ' " >' + data.lsttopupreport[i].NetAmount +
+                        $("#tblData").append('<tr><td id="CurrentDate' + i + ' " >' + data.lsttopupreport[i].CurrentDate +
+                            '</td><td id="LoginId' + i + ' " >' + data.lsttopupreport[i].LoginId +
+                             '</td><td id="Name' + i + ' " >' + data.lsttopupreport[i].Name +
+                             '</td><td id="Amount' + i + ' " >' + data.lsttopupreport[i].Amount +
+                             '</td><td id="Level' + i + ' " >' + data.lsttopupreport[i].Level +
+                             '</td><td id="Fk_Paymentid' + i + ' " >' + data.lsttopupreport[i].Fk_Paymentid +
                             '</td></tr>')
                     }
-                    //$.noConflict();
+                    $.noConflict();
                     $("#myModal").modal('show');
                 }
             }
