--- a/MyTrade/Views/AdminReports/ViewProfile.cshtml
+++ b/MyTrade/Views/AdminReports/ViewProfile.cshtml
@@ -9,7 +9,8 @@
     max-width: 260px !important;
 }
         .user-profile .widget-content-area .user-info-list ul.contacts-block li {
-            margin-bottom: 22px !important;
+            /*margin-bottom: 22px !important;*/
+             margin-bottom: 39px !important;
         }
 </style>
 
@@ -182,6 +183,17 @@
                                 <p>@ViewBag.PanNo</p>
                             </div>
                         </div>
+
+                        <div class="item-timeline">
+                            <div class="t-meta-date">
+                                <p class="">Pan Image</p>
+                            </div>
+                            <div class="t-dot">
+                            </div>
+                            <div class="t-text">
+                                <img id="PanImage" src="@ViewBag.PanImage" height="50" width="120"  onchange="loadFile_adhar(event)"/>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -199,3 +211,10 @@
     </div>
     </div>
 }
+
+@*<script>
+    var loadFile_adhar = function (event) {
+        var image = document.getElementById('PanImage');
+        image.src = URL.createObjectURL(event.target.files[0]);
+    };
+</script>*@
