--- a/MyTrade/Views/Admin/PayoutDetailForAdmin.cshtml
+++ b/MyTrade/Views/Admin/PayoutDetailForAdmin.cshtml
@@ -33,7 +33,28 @@
                     </div>
                     <div class="widget-content widget-content-area">
                         <div class="row">
-                            <div class="col-lg-3 col-md-3" style="margin-left:10px">
+                            @*<div class="col-lg-3 col-md-3">*@
+                            <div class="col-lg-3">
+                                <div class="form-group">
+                                    <label>
+                                        Login Id
+                                    </label>
+                                    @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @Placeholder = "Login Id" })
+
+                                </div>
+                            </div>
+                            @*<div class="col-lg-3 col-md-3">*@
+                            <div class="col-lg-3">
+                                <div class="form-group">
+                                    <label>
+                                        Name
+                                    </label>
+                                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control", @Placeholder = "Name" })
+
+                                </div>
+                            </div>
+                            @*<div class="col-lg-3 col-md-3">*@
+                            <div class="col-lg-3">
                                 <div class="form-group">
                                     <label>
                                         From Date
@@ -42,24 +63,28 @@
 
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-3">
+                            @*<div class="col-lg-3 col-md-3">*@
+                            <div class="col-lg-3">
                                 <div class="form-group">
                                     <label> To Date</label>
                                     @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @Placeholder = "To Date" })
 
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-3" style="margin-top:28px">
+                            @*<div class="col-lg-3 col-md-3" style="margin-top:28px">*@
+                            <div class="col-lg-3" style="margin-top:28px">
                                 <div class="form-group">
                                     <input type="submit" class="btn btn-success" value="Search" name="btnSearch" />
                                 </div>
                             </div>
                         </div>
                         <div class="row">
-                            <table id="html5-extension" class="table table-hover non-hover">
+              <table  id="html5-extension" class="table table-hover non-hover table-responsive" style="width:100%" data-page-length='6'>
                                 <thead>
                                     <tr>
                                         <th>Sr No.</th>
+                                        <th>Login Id</th>
+                                        <th>Name</th>
                                         <th>Closing Date</th>
                                         <th>Payout No</th>
                                         <th>Level Income TTP</th>
@@ -80,6 +105,8 @@
                                             {
                                                 <tr class="text-left">
                                                     <td>@i</td>
+                                                    <td>@Item.LoginId</td>
+                                                    <td>@Item.Name</td>
                                                     <td>@Item.ClosingDate</td>
                                                     <td>@Item.PayoutNo</td>
                                                     <td>@Item.LevelIncomeTR1</td>
@@ -94,7 +121,23 @@
                                         }
                                     }
                                 </tbody>
+                                <tfoot>
+                                    <tr>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
+                                        <th>Total </th>
+                                        <th>@ViewBag.LevelIncomeTR1</th>
+                                        <th>@ViewBag.LevelIncomeTR2</th>
+                                        <th>@ViewBag.GrossAmount</th>
+                                        <th>@ViewBag.TDSAmount</th>
+                                        <th>@ViewBag.AdminFee</th>
+                                        <th>@ViewBag.NetAmount</th>
+                                    </tr>
+                                </tfoot>
                             </table>
+
                         </div>
                     </div>
                 </div>
@@ -144,10 +187,10 @@
 <script src="~/plugins/flatpickr/custom-flatpickr.js"></script>
 <script>
     var f3 = flatpickr(document.getElementById('FromDate'), {
-        mode: "range"
+        //mode: "range"
     });
     var f4 = flatpickr(document.getElementById('ToDate'), {
-        mode: "range"
+        //mode: "range"
     });
     function closeModal() {
         $("#myModal").hide();
@@ -177,7 +220,7 @@
                              '</td><td id="Fk_Paymentid' + i + ' " >' + data.lsttopupreport[i].Fk_Paymentid +
                             '</td></tr>')
                     }
-                    $.noConflict();
+                    //$.noConflict();
                     $("#myModal").modal('show');
                 }
             }
