--- a/MyTrade/Views/Admin/DistributePayment.cshtml
+++ b/MyTrade/Views/Admin/DistributePayment.cshtml
@@ -54,12 +54,12 @@
                             <div class="col-lg-3 col-md-3" style="margin-top:28px">
                                 <div class="form-group">
                                     <input class="btn btn-success pull-left" type="submit" value="Get Details" id="GetDetails" name="GetDetails" />
-                                  
+
                                 </div>
                             </div>
                         </div>
-                        <div class="widget-content widget-content-area br-12"> 
-                            <table  class="table table-hover non-hover" >
+                        <div class="widget-content widget-content-area br-12">
+                            <table id="html5-extension" class="table table-hover non-hover table-responsive" style="width:100%" data-page-length='6'>
                                 <thead>
                                     <tr>
                                         <th>Sr No.</th>
@@ -112,9 +112,9 @@
                                     }
 
                                 </tbody>
-                                
+
                             </table>
-                          
+
                         </div>
                         <input type="submit" class="btn btn-success" value="Distribute Payment" name="btnSearch" onclick="return Validate()" />
                     </div>
@@ -125,7 +125,7 @@
     ////modal
 
     @Html.HiddenFor(m => m.LoginId)
-    <div class="modal fade bd-example-modal-lg" tabindex="-1" id="myModal" role="dialog" data-backdrop="static"  aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" id="myModal" role="dialog" data-backdrop="static" aria-labelledby="myLargeModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -166,53 +166,53 @@
             </div>
         </div>
     </div>
-            <div class="modal fade bd-example-modal-lg" tabindex="-1" id="myModalTPS" role="dialog" data-backdrop="static" data-keyboard="false" aria-labelledby="myModalTPS" aria-hidden="true">
-                <div class="modal-dialog modal-lg" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h6 class="modal-title">TPS Level Income Details</h6>
-                            <button type="button" class="close" data-dismiss="modal" onclick="closeModal();">&times;</button>
-                        </div>
-                        <div class="modal-body" style="color: black">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="panel-body table-responsive">
-                                        <table class="table table-striped table-bordered table-hover" id="tblDataTPS">
-                                            <thead>
-                                                <tr>
-                                                    <th>CurrentDate</th>
-                                                    <th>From LoginId</th>
-                                                    <th>From Name</th>
-                                                    <th>Amount</th>
-                                                    <th>Level</th>
-                                                </tr>
-                                                <tr></tr>
-                                            </thead>
-                                            <tfoot>
-                                                <tr>
-                                                    <td></td>
-                                                    <td></td>
-                                                    <td></td>
-                                                    <td></td>
-                                                    <td></td>
-                                                    @*<td></td>*@
-                                                </tr>
-                                            </tfoot>
-                                        </table>
-                                    </div>
-                                </div>
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" id="myModalTPS" role="dialog" data-backdrop="static" data-keyboard="false" aria-labelledby="myModalTPS" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h6 class="modal-title">TPS Level Income Details</h6>
+                    <button type="button" class="close" data-dismiss="modal" onclick="closeModal();">&times;</button>
+                </div>
+                <div class="modal-body" style="color: black">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="panel-body table-responsive">
+                                <table class="table table-striped table-bordered table-hover" id="tblDataTPS">
+                                    <thead>
+                                        <tr>
+                                            <th>CurrentDate</th>
+                                            <th>From LoginId</th>
+                                            <th>From Name</th>
+                                            <th>Amount</th>
+                                            <th>Level</th>
+                                        </tr>
+                                        <tr></tr>
+                                    </thead>
+                                    <tfoot>
+                                        <tr>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            @*<td></td>*@
+                                        </tr>
+                                    </tfoot>
+                                </table>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
 }
 
 <script src="~/plugins/flatpickr/flatpickr.js"></script>
 <script src="~/plugins/flatpickr/custom-flatpickr.js"></script>
 @*<script src="~/WebsiteCss/js/jquery.js"></script>
-<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-<link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">*@
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">*@
 
 <script>
     var f3 = flatpickr(document.getElementById('ClosingDate'), {
@@ -249,7 +249,7 @@
                                 //'</td><td id="UsedFor' + i + ' " >' + data.lsttopupreport[i].UsedFor +
                             '</td></tr>')
                     }
-                    //$.noConflict(); 
+                    //$.noConflict();
                     $("#myModal").modal('show');
                     keyboard: false;
                     backdrop: 'static';
