--- a/MyTrade/Views/Shared/_UserLayout.cshtml
+++ b/MyTrade/Views/Shared/_UserLayout.cshtml
@@ -312,7 +312,7 @@
                         <a href="#Team" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                             <div class="">
                                 <i class="fa fa-users"></i>
-                                <span>Team</span>
+                                <span>Level Reports</span>
                             </div>
                             <div>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
@@ -326,7 +326,7 @@
                                     <a href="/Downline/DownLineList">Downline</a>
                                 </li>*@
                             <li>
-                                <a href="/Downline/DirectList">Direct</a>
+                                <a href="/Downline/DirectList">DownTeam Tree</a>
                             </li>
                             <li>
                                 <a href="/user/TreeTTP">Level Tree TTP</a>
@@ -336,7 +336,7 @@
                             </li>
 
                             <li>
-                                <a href="/Downline/AssociateTree">Downteam Tree</a>
+                                <a href="/Downline/AssociateTree">Direct List</a>
                             </li>
                         </ul>
                     </li>
