--- a/MyTrade/Views/Wallet/ROIIncomeReports.cshtml
+++ b/MyTrade/Views/Wallet/ROIIncomeReports.cshtml
@@ -70,13 +70,23 @@
                                                     <td>@Item.Name</td>
                                                     <td>@Item.Date</td>
                                                     <td>@Item.TopUpAmount</td>
-                                                    <td><a href="/Wallet/ViewROI?Id=@Item.ROIId" cl class="btn btn-info btn-sm">View TPS</a></td>
+                                                    <td><a href="/Wallet/ViewROI?InvId=@Item.Pk_InvestmentId" cl class="btn btn-info btn-sm">View TPS</a></td>
                                                 </tr>
                                                 i++;
                                             }
                                         }
                                     }
                                 </tbody>
+                                @*<tfoot>
+                                    <tr>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
+                                        <th>Total Amount Received</th>
+                                        <th>@ViewBag.TopUpAmount</th>
+                                        <th></th>
+                                    </tr>
+                                </tfoot>*@
                             </table>
                         </div>
                     </div>
