--- a/MyTrade/Views/Admin/BusinessReports.cshtml
+++ b/MyTrade/Views/Admin/BusinessReports.cshtml
@@ -129,6 +129,18 @@
                                         }
                                     }
                                 </tbody>
+                                <tfoot>
+                                    <tr>
+                                        <th></th>
+                                        <th></th>
+                                        <th>Total</th>
+                                        <th>@ViewBag.Amount</th>
+                                        <th>@ViewBag.BV</th>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
+                                    </tr>
+                                </tfoot>
                             </table>
                         </div>
                     </div>
