--- a/MyTrade/Views/Downline/AssociateTree.cshtml
+++ b/MyTrade/Views/Downline/AssociateTree.cshtml
@@ -107,7 +107,7 @@
                                                         }
                                                     }
                                                 </tbody>
-                                                <tfoot>
+                                                @*<tfoot>
                                                     <tr>
                                                         <th>S No.</th>
                                                         <th>LoginId</th>
@@ -118,7 +118,7 @@
                                                         <th>Activation Date</th>
                                                         <th></th>
                                                     </tr>
-                                                </tfoot>
+                                                </tfoot>*@
                                             </table>
                                         </div>
                                     </div>
