--- a/MyTrade/Views/Home/Login.cshtml
+++ b/MyTrade/Views/Home/Login.cshtml
@@ -54,7 +54,7 @@
                                 <div class="d-table-cell">
                                     <div class="login-form">
                                         <div class="logo">
-                                            <a href="index.html"><img src="~/MytradeWebsite/assets/img/logo.png" alt="image" width="200px"></a>
+                                            <a href="/Home/Index"><img src="~/MytradeWebsite/assets/img/logo.png" alt="image" width="200px"></a>
                                             <h6 class="logo-tagline">One Step Towards Success</h6>
                                         </div>
 
