--- a/MyTrade/Views/User/UserDashBoard.cshtml
+++ b/MyTrade/Views/User/UserDashBoard.cshtml
@@ -226,7 +226,7 @@
             <div class="widget widget-account-invoice-three five">
                 <div class="widget-heading">
                     <div class="wallet-balance">
-                        <p>Level Income</p>
+                        <p>Level Bonus</p>
                         <h5 class=""><span class="w-currency"></span> @ViewBag.TotalIncome</h5>
                     </div>
                     <div class="particular-balance d-flex mt-5">
@@ -274,8 +274,9 @@
                             <h5 class=""><span class="w-currency"></span>Rs. @ViewBag.TotalPayoutWallet</</h5>
                         </div>
                         <div class="seconddiv">
-                            <p>TPS</p>
-                            <h5 class=""><span class="w-currency"></span> Rs. @ViewBag.TotalROI</h5>
+                            <p>Reward</p>
+                            <h5 class=""><span class="w-currency"></span> Rs. 0.00</h5>
+                            @*<h5 class=""><span class="w-currency"></span> Rs. @ViewBag.TotalROI</h5>*@
                         </div>
                     </div>
                 </div>
