--- a/MyTrade/Views/Admin/PayoutDetailForAdmin.cshtml
+++ b/MyTrade/Views/Admin/PayoutDetailForAdmin.cshtml
@@ -8,7 +8,7 @@
 
 <link href="~/plugins/flatpickr/flatpickr.css" rel="stylesheet" type="text/css">
 <link href="~/plugins/flatpickr/custom-flatpickr.css" rel="stylesheet" type="text/css">
-<style>
+@*<style>
     .table-responsive {
         display: block;
         width: 100%;
@@ -17,7 +17,7 @@
         max-height: 350px !important;
         overflow-y: scroll;
     }
-</style>
+</style>*@
 @using (Html.BeginForm("PayoutDetailForAdmin", "Admin", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
 {
     <div class="container">
@@ -47,10 +47,9 @@
                             <div class="col-lg-3">
                                 <div class="form-group">
                                     <label>
-                                        Name
+                                        Payout No.
                                     </label>
-                                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control", @Placeholder = "Name" })
-
+                                    @Html.TextBoxFor(m => m.PayoutNo, new { @class = "form-control", @Placeholder = "Payout No" })
                                 </div>
                             </div>
                             @*<div class="col-lg-3 col-md-3">*@
@@ -78,8 +77,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
-              <table  id="html5-extension" class="table table-hover non-hover table-responsive" style="width:100%" data-page-length='6'>
+                        <div class="widget-content widget-content-area br-6">
+                            <table id="html5-extension" class="table table-hover non-hover" style="width:100%" data-page-length='20'>
                                 <thead>
                                     <tr>
                                         <th>Sr No.</th>
@@ -137,51 +136,52 @@
                                     </tr>
                                 </tfoot>
                             </table>
-
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
     </div>
-    <div class="modal fade bd-example-modal-lg" tabindex="-1" id="myModal" role="dialog" data-backdrop="static" data-keyboard="false" aria-labelledby="myModalTPS" aria-hidden="true">
-        <div class="modal-dialog modal-lg" role="document">
 
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h6 class="modal-title">Payout Details</h6>
-                    <button type="button" class="close" data-dismiss="modal" onclick="closeModal();">&times;</button>
+        <div class="modal fade bd-example-modal-lg" tabindex="-1" id="myModal" role="dialog" data-backdrop="static" data-keyboard="false" aria-labelledby="myModalTPS" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
 
-                </div>
-                <div class="modal-body" style="color: black">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="panel-body table-responsive">
-                                <table class="table table-striped table-bordered table-hover" id="tblData">
-                                    <thead>
-                                        <tr>
-                                            <th>CurrentDate</th>
-                                            <th>From LoginId</th>
-                                            <th>From Name</th>
-                                            <th>Amount</th>
-                                            <th>Level</th>
-                                            <th>Payment Type</th>
-                                        </tr>
-                                    </thead>
-                                </table>
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h6 class="modal-title">Payout Details</h6>
+                        <button type="button" class="close" data-dismiss="modal" onclick="closeModal();">&times;</button>
+
+                    </div>
+                    <div class="modal-body" style="color: black">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="panel-body table-responsive">
+                                    <table class="table table-striped table-bordered table-hover" id="tblData">
+                                        <thead>
+                                            <tr>
+                                                <th>CurrentDate</th>
+                                                <th>From LoginId</th>
+                                                <th>From Name</th>
+                                                <th>Amount</th>
+                                                <th>Level</th>
+                                                <th>Payment Type</th>
+                                            </tr>
+                                        </thead>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    @*<div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal" onclick="closeModal();">Close</button>
+                        </div>*@
                 </div>
-                @*<div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal" onclick="closeModal();">Close</button>
-                    </div>*@
-            </div>
 
+            </div>
         </div>
-    </div>
-    @Html.HiddenFor(m => m.Fk_UserId)
+        @Html.HiddenFor(m => m.Fk_UserId)
 }
 <script src="~/plugins/flatpickr/flatpickr.js"></script>
 <script src="~/plugins/flatpickr/custom-flatpickr.js"></script>
