--- a/MyTrade/Views/Downline/DirectList.cshtml
+++ b/MyTrade/Views/Downline/DirectList.cshtml
@@ -23,22 +23,22 @@
                         <div class="widget-content widget-content-area br-6">
 
                             <div class="row">
-                                <div class="col-lg-3">
+                                @*<div class="col-lg-3">
                                     <div class="form-group">
                                         <label>  Name </label>
                                         @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
                                     </div>
-                                </div>
+                                </div>*@
                                 <div class="col-lg-3">
                                     <div class="form-group">
                                         <label>From Date  </label>
-                                        @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control" })
+                                        @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control",@readonly=true })
                                     </div>
                                 </div>
                                 <div class="col-lg-3">
                                     <div class="form-group">
                                         <label>To Date  </label>
-                                        @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control" })
+                                        @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @readonly = true })
                                     </div>
                                 </div>
                                 @*<div class="col-md-3">
@@ -143,9 +143,11 @@
         </div>
     </div>
 }
+
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />
+
 <script>
     $('#FromDate').datepicker({
         dateFormat: 'dd/mm/yy',
