--- a/MyTrade/Views/Wallet/ViewROI.cshtml
+++ b/MyTrade/Views/Wallet/ViewROI.cshtml
@@ -13,12 +13,19 @@
                 <div class="statbox widget box box-shadow">
                     <div class="widget-header">
                         <div class="row">
-                            <div class="col-xl-12 col-md-12 col-sm-12 col-12">
+                            @*<div class="col-xl-12 col-md-12 col-sm-12 col-12">*@
+                            <div class="col-sm-4">
                                 <h4>View TPS</h4>
                                 <span class="text-danger">
                                     @TempData["ROIIncome"]
                                 </span>
                             </div>
+                            <div class="col-sm-4">
+                                <span>
+                                    <a href="/Wallet/ROIIncomeReports" class="btn btn-info">Back</a>
+                                </span>
+                            @*</div>*@
+                                </div>
                         </div>
                     </div>
                     <div class="widget-content widget-content-area">
